--- a/ns.yaml
+++ b/ns.yaml
@@ -2,3 +2,13 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: myns
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: taa
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: adminer
